--- a/src/components/App.css
+++ b/src/components/App.css
@@ -4,15 +4,8 @@
   grid-template-columns: max-content auto;
   grid-template-rows: max-content auto;
   /* grid-gap: 10px; */
-  background-color: #2196f3;
+  background-color: #ffffff;
   /* padding: 10px; */
-}
-
-.grid-container > div {
-  background-color: rgba(255, 255, 255, 0.8);
-  text-align: center;
-  /* padding: 20px 0; */
-  /* font-size: 30px; */
 }
 
 .header {
@@ -25,6 +18,7 @@
   grid-row-start: 2;
   grid-row-end: 3;
   min-height: 100%;
+  background-color: #19212b;
 }
 .content {
   grid-column-start: 2;
